Modificaciones MOS -> RTL con MOS

--- a/Ejercicio 1/PCB_Project/Project Outputs for PCB_Project/Board Information - PCB2.html
+++ b/Ejercicio 1/PCB_Project/Project Outputs for PCB_Project/Board Information - PCB2.html
@@ -160,7 +160,7 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">3:26:13 PM</td>
+<td class="front_matter_column3">7:47:55 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time</td>
@@ -170,7 +170,7 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Filename</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3"><a href="file:///C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio\PCB_Project\PCB2.PcbDoc" class="file"><acronym title="C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio\PCB_Project\PCB2.PcbDoc">C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio\PCB_Project\PCB2.PcbDoc</acronym></a></td>
+<td class="front_matter_column3"><a href="file:///C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio 1\PCB_Project\PCB2.PcbDoc" class="file"><acronym title="C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio 1\PCB_Project\PCB2.PcbDoc">C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio 1\PCB_Project\PCB2.PcbDoc</acronym></a></td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Units</td>
@@ -180,27 +180,27 @@
 </td>
 </tr>
 </table>
-<hr><a name="IDOCYFRI0JWPNTH5IYP0PSCEJQ5J3QFSP2UFDJX5FKXSDIOYL0HDBD"><h2>Contents</h2></a><p class="contents_level1"><a href="#IDOCYFRI0JWPNTH5IYP0PSCEJQ5J3QFSP2UFDJX5FKXSDIOYL0HDBD">Contents</a></p>
-<p class="contents_level1"><a href="#ID0GZ4XKKFZHO5IDW1KGHHB4USQKUH2FGGH1QEYCHZJY0SX4VGCF3B">Board Specification</a></p>
-<p class="contents_level2"><a href="#IDCMD11TZ4DWJEOPH131HBZXSW5EAN2NGFMXT2SAEK2H0FHTPG1BIF">General<br></a></p>
-<p class="contents_level1"><a href="#IDPKJF1HTKP5WWLUFCIZAGS2RCTHKM0B5WOPQVUYCXGDTUZUWCLKLF">Routing</a></p>
-<p class="contents_level2"><a href="#ID3EJFNPK4CCQHPAH4RCRWJTKA1LZWVT4ON2VCSQP3OGL5ZDHRWSBK">Routing Information<br></a></p>
-<p class="contents_level1"><a href="#IDSMC3HS1NHEKVCYJQX5PPYEN3QMFYAGE35MY4LFIPH13CACA3XDMP">Layer Information</a></p>
-<p class="contents_level2"><a href="#IDZDON3XBSNNWZGCVORGRUFWZVYCJEKYCTDYOUNSHKKMLIUFJXXTCH">Layer Information<br></a></p><br><hr><a name="ID0GZ4XKKFZHO5IDW1KGHHB4USQKUH2FGGH1QEYCHZJY0SX4VGCF3B"><h2>Board Specification</h2></a><a name="IDCMD11TZ4DWJEOPH131HBZXSW5EAN2NGFMXT2SAEK2H0FHTPG1BIF"><table>
+<hr><a name="IDMUHYVNSZL2QQMXTYXHE24D0G1LN003DJZNGOCWOMGISWLB2ZO01B"><h2>Contents</h2></a><p class="contents_level1"><a href="#IDMUHYVNSZL2QQMXTYXHE24D0G1LN003DJZNGOCWOMGISWLB2ZO01B">Contents</a></p>
+<p class="contents_level1"><a href="#IDOXZYL3FOSJXQCWYOSUQ4M0HGUC010ICCV3WS1LK4IU3UHEV5T0P">Board Specification</a></p>
+<p class="contents_level2"><a href="#IDQX1JEHABQOKTHXGCJWNH42FY5J5PDKD4PGII4NQAR5LGFRNLTEG">General<br></a></p>
+<p class="contents_level1"><a href="#IDTSXSMWSGLBJNONS2UMQ5MAORCOPNFRCP5UHNEIPSGMLLIMMIZM3O">Routing</a></p>
+<p class="contents_level2"><a href="#IDS5STWXYKT0C4MPIOPGNHBKXB5DKXIIV5VQOMAHNKNSHNYHSDZUYF">Routing Information<br></a></p>
+<p class="contents_level1"><a href="#ID0AONHFFTYURDJMPXD0WSWNDJD4FDZ5KQIY4CUKUFRUNSQ4I55KO">Layer Information</a></p>
+<p class="contents_level2"><a href="#IDX3C4SAKZ0332CI44I2FOYVLO5OBMN2ROJACRQIDJMUOECNPGTIPE">Layer Information<br></a></p><br><hr><a name="IDOXZYL3FOSJXQCWYOSUQ4M0HGUC010ICCV3WS1LK4IU3UHEV5T0P"><h2>Board Specification</h2></a><a name="IDQX1JEHABQOKTHXGCJWNH42FY5J5PDKD4PGII4NQAR5LGFRNLTEG"><table>
 <tr>
 <th style="text-align : left" colspan="2" class="">General</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
 <td class="column1">Board Size</td>
-<td class="column2"><a name="coordinate" value="19685039">50mm
+<td class="column2"><a name="coordinate" value="39370079">100mm
 			</a> &nbsp;x &nbsp;<a name="coordinate" value="19685039">50mm
 			</a></td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1">Components on board</td>
-<td class="column2">12</td>
+<td class="column2">13</td>
 </tr>
-</table></a><a href="#top">Back to top</a><br><br><hr><a name="IDPKJF1HTKP5WWLUFCIZAGS2RCTHKM0B5WOPQVUYCXGDTUZUWCLKLF"><h2>Routing</h2></a><a name="ID3EJFNPK4CCQHPAH4RCRWJTKA1LZWVT4ON2VCSQP3OGL5ZDHRWSBK"><table>
+</table></a><a href="#top">Back to top</a><br><br><hr><a name="IDTSXSMWSGLBJNONS2UMQ5MAORCOPNFRCP5UHNEIPSGMLLIMMIZM3O"><h2>Routing</h2></a><a name="IDS5STWXYKT0C4MPIOPGNHBKXB5DKXIIV5VQOMAHNKNSHNYHSDZUYF"><table>
 <tr>
 <th style="text-align : left" colspan="2" class="">Routing Information</th>
 </tr>
@@ -220,7 +220,7 @@
 <td class="column1">Connections remaining</td>
 <td class="column2">0</td>
 </tr>
-</table></a><a href="#top">Back to top</a><br><br><hr><a name="IDSMC3HS1NHEKVCYJQX5PPYEN3QMFYAGE35MY4LFIPH13CACA3XDMP"><h2>Layer Information</h2></a><a name="IDZDON3XBSNNWZGCVORGRUFWZVYCJEKYCTDYOUNSHKKMLIUFJXXTCH"><table>
+</table></a><a href="#top">Back to top</a><br><br><hr><a name="ID0AONHFFTYURDJMPXD0WSWNDJD4FDZ5KQIY4CUKUFRUNSQ4I55KO"><h2>Layer Information</h2></a><a name="IDX3C4SAKZ0332CI44I2FOYVLO5OBMN2ROJACRQIDJMUOECNPGTIPE"><table>
 <tr>
 <th class="column1">Layer</th>
 <th class="column2">Arcs</th>
@@ -235,9 +235,9 @@
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
 <td class="column1">Top Layer</td>
 <td class="column2">0</td>
-<td class="column3">8</td>
+<td class="column3">12</td>
 <td class="column4">0</td>
-<td class="column5">16</td>
+<td class="column5">27</td>
 <td class="column6">0</td>
 <td class="column7">0</td>
 <td class="column8">0</td>
@@ -248,7 +248,7 @@
 <td class="column2">0</td>
 <td class="column3">0</td>
 <td class="column4">0</td>
-<td class="column5">54</td>
+<td class="column5">46</td>
 <td class="column6">0</td>
 <td class="column7">0</td>
 <td class="column8">0</td>
@@ -259,11 +259,11 @@
 <td class="column2">0</td>
 <td class="column3">0</td>
 <td class="column4">0</td>
-<td class="column5">10</td>
+<td class="column5">5</td>
 <td class="column6">0</td>
 <td class="column7">0</td>
 <td class="column8">0</td>
-<td class="column9">26</td>
+<td class="column9">20</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1">Mechanical 13</td>
@@ -281,7 +281,7 @@
 <td class="column2">0</td>
 <td class="column3">0</td>
 <td class="column4">0</td>
-<td class="column5">8</td>
+<td class="column5">12</td>
 <td class="column6">0</td>
 <td class="column7">0</td>
 <td class="column8">0</td>
@@ -290,7 +290,7 @@
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1">Multi-Layer</td>
 <td class="column2">0</td>
-<td class="column3">22</td>
+<td class="column3">19</td>
 <td class="column4">6</td>
 <td class="column5">0</td>
 <td class="column6">0</td>
@@ -314,10 +314,10 @@
 <td class="column2">6</td>
 <td class="column3">0</td>
 <td class="column4">0</td>
-<td class="column5">46</td>
-<td class="column6">26</td>
+<td class="column5">50</td>
+<td class="column6">28</td>
 <td class="column7">0</td>
-<td class="column8">2</td>
+<td class="column8">1</td>
 <td class="column9">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
@@ -380,7 +380,7 @@
 <td class="column2">0</td>
 <td class="column3">0</td>
 <td class="column4">0</td>
-<td class="column5">4</td>
+<td class="column5">7</td>
 <td class="column6">0</td>
 <td class="column7">0</td>
 <td class="column8">0</td>
@@ -400,13 +400,13 @@
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
 <td style="font-weight : bold" class="column2">6</td>
-<td style="font-weight : bold" class="column3">30</td>
+<td style="font-weight : bold" class="column3">31</td>
 <td style="font-weight : bold" class="column4">6</td>
-<td style="font-weight : bold" class="column5">138</td>
-<td style="font-weight : bold" class="column6">26</td>
+<td style="font-weight : bold" class="column5">147</td>
+<td style="font-weight : bold" class="column6">28</td>
 <td style="font-weight : bold" class="column7">0</td>
-<td style="font-weight : bold" class="column8">3</td>
-<td style="font-weight : bold" class="column9">26</td>
+<td style="font-weight : bold" class="column8">2</td>
+<td style="font-weight : bold" class="column9">20</td>
 </tr>
 </table></a><a href="#top">Back to top</a><br><br><hr>
 </body>
