--- a/Ejercicio-8/Placas/Display99/Display.PcbDoc.htm
+++ b/Ejercicio-8/Placas/Display99/Display.PcbDoc.htm
@@ -131,12 +131,12 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">1:40:53 AM</td>
+            <td class="front_matter_column3">3:35:58 AM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3"><a href="file://C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio-7\Placa\Counters.PcbDoc" class="file"><acronym title="C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio-7\Placa\Counters.PcbDoc">C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio-7\Placa\Counters.PcbDoc</acronym></a></td>
+            <td class="front_matter_column3"><a href="file://C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio-8\Placas\Display99\Display.PcbDoc" class="file"><acronym title="C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio-8\Placas\Display99\Display.PcbDoc">C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio-8\Placas\Display99\Display.PcbDoc</acronym></a></td>
             </tr>
         </table>
         
