--- a/Ejercicio-7/Placa/Project Outputs for Contadores/Board Information - Counters.html
+++ b/Ejercicio-7/Placa/Project Outputs for Contadores/Board Information - Counters.html
@@ -3,50 +3,73 @@
 <META http-equiv="Content-Type" content="text/html">
 <style type="text/css">
 		h1, h2, h3, h4, h5, h6 { 
-			font-family : sans-serif;
-			color : white;
-			background-color : #21489e;
+			font-family : segoe ui;
+			color : black;
+			background-color : #EDE7D9;
 			padding: 0.3em;
 		}
-		body { 
-			font-family : verdana;
+
+		h1 {
+			font-size: 1.2em;
+		}		
+
+		h2 {
+			font-size: 1.2em;
 		}
+
+		body { 
+			font-family : segoe ui;
+		}
+
 		td, th {  
 			padding: 0.5em;
-			text-align : center;
-			width : 18%;	
+			text-align : left;
 		}
 		th { 
-			background-color : #A6CAF0;
+			background-color : #EEEEEE;
 		
 		}
 		th.column1, td.column1 { 
-			text-align: left;
-			width : auto; 
+			width : 50%; 
 		}
+
+        th.column2, td.column2 {
+            width : 25%;
+        }
+
 		table { 
 			width : 100%; 
+            font-size: 0.9em;
 		}
-		.front_matter, .front_matter_column1, .front_matter_column2, .front_matter_column3 {
+		.front_matter, .front_matter_column1, .front_matter_column2, .front_matter_column3
+		{
+			left : 0;
+			top : 0;
+			padding: 0em;
 			padding-top : 0.1em;
-			padding-bottom : 0.1em;
 			border : 0px solid black;
-			width : auto;
-			vertical-align: top
+			width : 100%;
+			vertical-align: top;
+			text-align: left;
 		}
+
 		.front_matter_column1 {
-			text-align : right;
+			width : 5em;
+			font-weight: bold;
 		}
+
+		.front_matter_column2 {
+			width: 0.1em;
+		}
+
+		.front_matter_column3 {
+			width : auto;
+		}
+
 		.total_column1, .total_column {
-			font-weight : bold;	
+			font-weight : bold;
 		}
 		.total_column1 {
-			text-align : right;
-		}
-		.front_matter_column2 {
-			text-align : center;
-		}
-		.front_matter_column3 {
 			text-align : left;
 		}
 		.warning, .error { 
@@ -54,19 +77,19 @@
 			font-weight : bold;
 		}	
 		tr.onmouseout_odd { 
-			background-color : #EEEEE0 
+			background-color : #white;
 		}
 		tr.onmouseout_even { 
-			background-color : #F3F3E3   
+			background-color : #FAFAFA;
 		}
 		tr.onmouseover_odd, tr.onmouseover_even { 
-			background-color : lightYellow 
+			background-color : #EEEEEE;
 		} 
 		a:link, a:visited, .q a:link,.q a:active,.q {
 			color: #21489e; 
 		}
 		a:link.callback, a:visited.callback { 
-			color: #008000 
+			color: #21489e;
 		}
 		a:link.customize, a:visited.customize {
 			color: #C0C0C0;
@@ -149,44 +172,43 @@
 	</script><title>Board Information Report</title>
 </head>
 <body onload="document.getElementById('radio_mm').click()"><img ALT="Altium" src="
-			file://C:\Users\Public\Documents\Altium\AD15\Templates\AD-rgb_logo_223x64.gif
+			file://C:\Users\Public\Documents\Altium\AD17\Templates\AD_logo.png
 		"><a href="dxpprocess://Client:SetupPreferences?Server=PCB|PageName=Reports" class="customize"><acronym title="dxpprocess://Client:SetupPreferences?Server=PCB|PageName=Reports">customize</acronym></a><h1>Board Information Report</h1>
 <table class="front_matter">
 <tr class="front_matter">
-<td class="front_matter_column1">Date</td>
-<td class="front_matter_column2">:</td>
+<td class="front_matter_column1">Date:</td>
+<td class="front_matter_column2"></td>
 <td class="front_matter_column3">09-Oct-19</td>
 </tr>
 <tr class="front_matter">
-<td class="front_matter_column1">Time</td>
-<td class="front_matter_column2">:</td>
-<td class="front_matter_column3">3:35:03 AM</td>
+<td class="front_matter_column1">Time:</td>
+<td class="front_matter_column2"></td>
+<td class="front_matter_column3">12:22:38 PM</td>
 </tr>
 <tr class="front_matter">
-<td class="front_matter_column1">Elapsed Time</td>
-<td class="front_matter_column2">:</td>
+<td class="front_matter_column1">Elapsed Time:</td>
+<td class="front_matter_column2"></td>
 <td class="front_matter_column3">00:00:00</td>
 </tr>
 <tr class="front_matter">
-<td class="front_matter_column1">Filename</td>
-<td class="front_matter_column2">:</td>
-<td class="front_matter_column3"><a href="file:///C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio-7\Placa\Counters.PcbDoc" class="file"><acronym title="C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio-7\Placa\Counters.PcbDoc">C:\Users\Guido\Documents\GitHub\tp2-grupo-3\Ejercicio-7\Placa\Counters.PcbDoc</acronym></a></td>
+<td class="front_matter_column1">Filename:</td>
+<td class="front_matter_column2"></td>
+<td class="front_matter_column3"><a href="file:///C:\Users\Acer\Desktop\GitHub\ElectroIII\tp2-grupo-3\Ejercicio-7\Placa\Counters.PcbDoc" class="file"><acronym title="C:\Users\Acer\Desktop\GitHub\ElectroIII\tp2-grupo-3\Ejercicio-7\Placa\Counters.PcbDoc">C:\Users\Acer\Desktop\GitHub\ElectroIII\tp2-grupo-3\Ejercicio-7\Placa\Counters.PcbDoc</acronym></a></td>
 </tr>
 <tr class="front_matter">
-<td class="front_matter_column1">Units</td>
-<td class="front_matter_column2">:</td>
+<td class="front_matter_column1">Units:</td>
+<td class="front_matter_column2"></td>
 <td class="front_matter_column3">
 <form><input type="radio" name="radio_units" id="radio_mm" onclick="changeUnits(this, 'mm')">mm<input type="radio" name="radio_units" id="radio_mil" onclick="changeUnits(this, 'mil')">mils</form>
 </td>
 </tr>
-</table>
-<hr><a name="IDV14PNSIKYJKZLYPB1TDWN43AICUIZ0RUSBKXJTKYVXCZZE5YUBHG"><h2>Contents</h2></a><p class="contents_level1"><a href="#IDV14PNSIKYJKZLYPB1TDWN43AICUIZ0RUSBKXJTKYVXCZZE5YUBHG">Contents</a></p>
-<p class="contents_level1"><a href="#IDGXIRYNY4Z2USKULNFS1SVACHOE02URGYZSVH0VGDAB1RVUZGAO3M">Board Specification</a></p>
-<p class="contents_level2"><a href="#IDRDLGFSGBUG21MD0CGROC4OJBVKWZGWGXROFHPWICVANXLZRHJB0F">General<br></a></p>
-<p class="contents_level1"><a href="#IDUASS3WYQURLFGY0IVPDBXV3XIOAVNJIC2OIS3EIOBCNJA1CKQSQM">Routing</a></p>
-<p class="contents_level2"><a href="#IDLYSVWDSYGQWREP45DHWD22J2QPKPXMJ1JAKBXKDJAA3HV2NNJNOJ">Routing Information<br></a></p>
-<p class="contents_level1"><a href="#ID0EX35A1A3Q3RITXSMINQDNHRDN1NEWQXE0E2G1PHO01HSXBELWZN">Layer Information</a></p>
-<p class="contents_level2"><a href="#IDK5LTWYMFRXUZEU5RFKBF2T0CLOU5C4CI1XTCK4B1UYAEVX3OL2AB">Layer Information<br></a></p><br><hr><a name="IDGXIRYNY4Z2USKULNFS1SVACHOE02URGYZSVH0VGDAB1RVUZGAO3M"><h2>Board Specification</h2></a><a name="IDRDLGFSGBUG21MD0CGROC4OJBVKWZGWGXROFHPWICVANXLZRHJB0F"><table>
+</table><a name="ID4NCDNQ5Z424JDGPT2VSA1BKESBZFDXIKWHHVZRKXP32FCBH315HD"><h2>Contents</h2></a><p class="contents_level1"><a href="#ID4NCDNQ5Z424JDGPT2VSA1BKESBZFDXIKWHHVZRKXP32FCBH315HD">Contents</a></p>
+<p class="contents_level1"><a href="#ID4LVGLSROQSMFFLV0IOIV1ZP1SDXFCJ5VIORWGZHRFBCHDGQU5PAJ">Board Specification</a></p>
+<p class="contents_level2"><a href="#IDNB1PH0F1VULTLIHKWYFBCKQ2ADZXSOXRPHIXPJDAZDLAPZ1HS2U">General<br></a></p>
+<p class="contents_level1"><a href="#IDHMM1H2FKZUP5G53FQKJNTDP1DLIEFHYBOGXVXVICLL0I42RODV2M">Routing</a></p>
+<p class="contents_level2"><a href="#IDSSPYEYRCPTHQE4RQCQJBBCFIJCUJBFNZWLEDG0ORNLJO0YGAJ51B">Routing Information<br></a></p>
+<p class="contents_level1"><a href="#IDQVCZDC2F3E5FIGWHBP344POPQPEFM4YTL1GM0QFGBS0YQZ42KPRF">Layer Information</a></p>
+<p class="contents_level2"><a href="#IDVTSFTQL2GVGCB35I21UKL0NKXJSXGRC2WZN3HPEYGAKMRQSB3X2N">Layer Information<br></a></p><br><a name="ID4LVGLSROQSMFFLV0IOIV1ZP1SDXFCJ5VIORWGZHRFBCHDGQU5PAJ"><h2>Board Specification</h2></a><a name="IDNB1PH0F1VULTLIHKWYFBCKQ2ADZXSOXRPHIXPJDAZDLAPZ1HS2U"><table>
 <tr>
 <th style="text-align : left" colspan="2" class="">General</th>
 </tr>
@@ -198,9 +220,9 @@
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1">Components on board</td>
-<td class="column2">31</td>
+<td class="column2">40</td>
 </tr>
-</table></a><a href="#top">Back to top</a><br><br><hr><a name="IDUASS3WYQURLFGY0IVPDBXV3XIOAVNJIC2OIS3EIOBCNJA1CKQSQM"><h2>Routing</h2></a><a name="IDLYSVWDSYGQWREP45DHWD22J2QPKPXMJ1JAKBXKDJAA3HV2NNJNOJ"><table>
+</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDHMM1H2FKZUP5G53FQKJNTDP1DLIEFHYBOGXVXVICLL0I42RODV2M"><h2>Routing</h2></a><a name="IDSSPYEYRCPTHQE4RQCQJBBCFIJCUJBFNZWLEDG0ORNLJO0YGAJ51B"><table>
 <tr>
 <th style="text-align : left" colspan="2" class="">Routing Information</th>
 </tr>
@@ -210,17 +232,17 @@
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1">Connections</td>
-<td class="column2">128</td>
+<td class="column2">146</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
 <td class="column1">Connections routed</td>
-<td class="column2">128</td>
+<td class="column2">146</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1">Connections remaining</td>
 <td class="column2">0</td>
 </tr>
-</table></a><a href="#top">Back to top</a><br><br><hr><a name="ID0EX35A1A3Q3RITXSMINQDNHRDN1NEWQXE0E2G1PHO01HSXBELWZN"><h2>Layer Information</h2></a><a name="IDK5LTWYMFRXUZEU5RFKBF2T0CLOU5C4CI1XTCK4B1UYAEVX3OL2AB"><table>
+</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDQVCZDC2F3E5FIGWHBP344POPQPEFM4YTL1GM0QFGBS0YQZ42KPRF"><h2>Layer Information</h2></a><a name="IDVTSFTQL2GVGCB35I21UKL0NKXJSXGRC2WZN3HPEYGAKMRQSB3X2N"><table>
 <tr>
 <th class="column1">Layer</th>
 <th class="column2">Arcs</th>
@@ -237,10 +259,10 @@
 <td class="column2">0</td>
 <td class="column3">0</td>
 <td class="column4">0</td>
-<td class="column5">165</td>
+<td class="column5">202</td>
 <td class="column6">0</td>
 <td class="column7">0</td>
-<td class="column8">0</td>
+<td class="column8">98</td>
 <td class="column9">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
@@ -248,10 +270,10 @@
 <td class="column2">0</td>
 <td class="column3">0</td>
 <td class="column4">0</td>
-<td class="column5">569</td>
+<td class="column5">592</td>
 <td class="column6">0</td>
 <td class="column7">0</td>
-<td class="column8">0</td>
+<td class="column8">292</td>
 <td class="column9">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
@@ -263,7 +285,7 @@
 <td class="column6">0</td>
 <td class="column7">0</td>
 <td class="column8">0</td>
-<td class="column9">22</td>
+<td class="column9">30</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1">Mechanical 4</td>
@@ -278,21 +300,21 @@
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
 <td class="column1">Mechanical 13</td>
-<td class="column2">0</td>
+<td class="column2">1</td>
 <td class="column3">0</td>
 <td class="column4">0</td>
-<td class="column5">0</td>
+<td class="column5">4</td>
 <td class="column6">0</td>
 <td class="column7">0</td>
 <td class="column8">0</td>
-<td class="column9">0</td>
+<td class="column9">1</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1">Mechanical 15</td>
 <td class="column2">0</td>
 <td class="column3">0</td>
 <td class="column4">0</td>
-<td class="column5">0</td>
+<td class="column5">2</td>
 <td class="column6">0</td>
 <td class="column7">0</td>
 <td class="column8">0</td>
@@ -301,8 +323,8 @@
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
 <td class="column1">Multi-Layer</td>
 <td class="column2">0</td>
-<td class="column3">218</td>
-<td class="column4">57</td>
+<td class="column3">238</td>
+<td class="column4">58</td>
 <td class="column5">0</td>
 <td class="column6">0</td>
 <td class="column7">0</td>
@@ -322,11 +344,11 @@
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
 <td class="column1">Top Overlay</td>
-<td class="column2">36</td>
+<td class="column2">39</td>
 <td class="column3">0</td>
 <td class="column4">0</td>
-<td class="column5">154</td>
-<td class="column6">66</td>
+<td class="column5">207</td>
+<td class="column6">84</td>
 <td class="column7">1</td>
 <td class="column8">0</td>
 <td class="column9">0</td>
@@ -410,15 +432,14 @@
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
-<td style="font-weight : bold" class="column2">60</td>
-<td style="font-weight : bold" class="column3">218</td>
-<td style="font-weight : bold" class="column4">57</td>
-<td style="font-weight : bold" class="column5">2380</td>
-<td style="font-weight : bold" class="column6">66</td>
+<td style="font-weight : bold" class="column2">64</td>
+<td style="font-weight : bold" class="column3">238</td>
+<td style="font-weight : bold" class="column4">58</td>
+<td style="font-weight : bold" class="column5">2499</td>
+<td style="font-weight : bold" class="column6">84</td>
 <td style="font-weight : bold" class="column7">1</td>
-<td style="font-weight : bold" class="column8">1</td>
-<td style="font-weight : bold" class="column9">22</td>
+<td style="font-weight : bold" class="column8">391</td>
+<td style="font-weight : bold" class="column9">31</td>
 </tr>
-</table></a><a href="#top">Back to top</a><br><br><hr>
-</body>
+</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br></body>
 </html>
