--- a/Ejercicio-8/Placas/JOYSTICK/Joystick.PcbDoc.htm
+++ b/Ejercicio-8/Placas/JOYSTICK/Joystick.PcbDoc.htm
@@ -131,12 +131,12 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">8:42:20 p. m.</td>
+            <td class="front_matter_column3">8:52:01 p. m.</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3"><a href="file://C:\Users\marth\Documents\ITBA\Electronica III\tps\tp2-grupo-3\Ejercicio-8\Placas\Display99feo\Display.PcbDoc" class="file"><acronym title="C:\Users\marth\Documents\ITBA\Electronica III\tps\tp2-grupo-3\Ejercicio-8\Placas\Display99feo\Display.PcbDoc">C:\Users\marth\Documents\ITBA\Electronica III\tps\tp2-grupo-3\Ejercicio-8\Placas\Display99feo\Display.PcbDoc</acronym></a></td>
+            <td class="front_matter_column3"><a href="file://C:\Users\marth\Documents\ITBA\Electronica III\tps\tp2-grupo-3\Ejercicio-8\Placas\JOYSTICK\Joystick.PcbDoc" class="file"><acronym title="C:\Users\marth\Documents\ITBA\Electronica III\tps\tp2-grupo-3\Ejercicio-8\Placas\JOYSTICK\Joystick.PcbDoc">C:\Users\marth\Documents\ITBA\Electronica III\tps\tp2-grupo-3\Ejercicio-8\Placas\JOYSTICK\Joystick.PcbDoc</acronym></a></td>
             </tr>
         </table>
         
